# text-editor

./: .gitignore  README.md  SPEC.md  index.html  package.json  pnpm-lock.yaml  test.txt  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: _config.yml  index.html
scripts/: publish.sh
src/: editor.ts  main.ts  styles.css
src-tauri/: Cargo.toml  main.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/fonts/: LICENSE-Hasklig.md
