[package]
name = "krill-text-editor"
version = "0.1.7"
description = "A minimal plain-text editor for Linux"
authors = ["Filip"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "krill_text_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
krill-desktop-core = { git = "https://github.com/krill-software/desktop-core", tag = "v0.2.0" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
